Added JSON file handler and gson dependency in pom. Need to continue working on file handler

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.1.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>  <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cbfacademy</groupId>
 	<artifactId>api-assessment</artifactId>
@@ -33,7 +33,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<!-- added gson dependency to write to json file-->
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.10.1</version>
+		</dependency>
+
+ </dependencies>
+	
 
 	<build>
 		<plugins>
