--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,25 @@
     		<artifactId>gson</artifactId>
     		<version>2.10.1</version>
 		</dependency>
+		<!-- added Thymeleaf dependencies-->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.0.11.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>3.0.11.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
 
- </dependencies>
+	</dependencies>
 	
 
 	<build>
